--- a/project/package.json
+++ b/project/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +51,8 @@
     "postcss": "^8.4.49",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
